source/repositories/compliant-framework-transit-core/templates/transit-dmz-vpc.yml
######################################################################################################################
#  Copyright 2020 Amazon.com, Inc. or its affiliates. All Rights Reserved.                                           #
#                                                                                                                    #
#  Licensed under the Apache License, Version 2.0 (the "License"). You may not use this file except in compliance    #
#  with the License. A copy of the License is located at                                                             #
#                                                                                                                    #
#      http://www.apache.org/licenses/LICENSE-2.0                                                                    #
#                                                                                                                    #
#  or in the 'license' file accompanying this file. This file is distributed on an 'AS IS' BASIS, WITHOUT WARRANTIES #
#  OR CONDITIONS OF ANY KIND, express or implied. See the License for the specific language governing permissions    #
#  and limitations under the License.                                                                                #
######################################################################################################################

AWSTemplateFormatVersion: 2010-09-09

Parameters:
  pName:
    Type: String

  pTransitGatewayId:
    Type: String

  pLoggingBucketArn:
    Type: String
  pCentralAccountId:
    Type: String
  pPrincipalOrgId:
    Type: String

  pVpcCidr:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /compliant/framework/transit/dmz-vpc/cidr
  pInstanceTenancy:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /compliant/framework/transit/dmz-vpc/instance-tenancy
  pPublicSubnetACidr:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /compliant/framework/transit/dmz-vpc/public-subnet/a/cidr
  pPublicSubnetBCidr:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /compliant/framework/transit/dmz-vpc/public-subnet/b/cidr
  pTransitGatewayAttachmentSubnetACidr:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /compliant/framework/transit/dmz-vpc/tgw-attach-subnet/a/cidr
  pTransitGatewayAttachmentSubnetBCidr:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /compliant/framework/transit/dmz-vpc/tgw-attach-subnet/b/cidr

Resources:
  #
  # VPC
  #
  rVpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref pVpcCidr
      EnableDnsHostnames: True
      EnableDnsSupport: True
      InstanceTenancy: !Ref pInstanceTenancy
      Tags:
        - Key: Name
          Value: !Sub ${pName}-vpc
  rVpcFlowLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      RetentionInDays: 365
  rVpcFlowLogCloudWatchRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - vpc-flow-logs.amazonaws.com
            Action:
              - sts:AssumeRole
      Policies:
        - PolicyName: root
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Resource: !GetAtt rVpcFlowLogGroup.Arn
                Action:
                  - logs:CreateLogGroup
                  - logs:CreateLogStream
                  - logs:DescribeLogGroups
                  - logs:DescribeLogStreams
                  - logs:PutLogEvents
  rVpcFlowLogCloudWatch:
    Type: AWS::EC2::FlowLog
    Properties:
      DeliverLogsPermissionArn: !GetAtt rVpcFlowLogCloudWatchRole.Arn
      LogDestination: !GetAtt rVpcFlowLogGroup.Arn
      ResourceId: !Ref rVpc
      ResourceType: VPC
      TrafficType: ALL
  rVpcFlowLogS3:
    Type: AWS::EC2::FlowLog
    Properties:
      LogDestinationType: s3
      LogDestination: !Ref pLoggingBucketArn
      ResourceId: !Ref rVpc
      ResourceType: VPC
      TrafficType: ALL

  #
  # SUBNETS
  #
  rPublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref rVpc
      CidrBlock: !Ref pPublicSubnetACidr
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref AWS::Region
      Tags:
        - Key: Name
          Value: !Sub ${pName}-public-subnet-a
  rPublicSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref rVpc
      CidrBlock: !Ref pPublicSubnetBCidr
      AvailabilityZone: !Select
        - 1
        - Fn::GetAZs: !Ref AWS::Region
      Tags:
        - Key: Name
          Value: !Sub ${pName}-public-subnet-b
  rTransitGatewayAttachmentSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref rVpc
      CidrBlock: !Ref pTransitGatewayAttachmentSubnetACidr
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref AWS::Region
      Tags:
        - Key: Name
          Value: !Sub ${pName}-tgw-attach-subnet-a
  rTransitGatewayAttachmentSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref rVpc
      CidrBlock: !Ref pTransitGatewayAttachmentSubnetBCidr
      AvailabilityZone: !Select
        - 1
        - Fn::GetAZs: !Ref AWS::Region
      Tags:
        - Key: Name
          Value: !Sub ${pName}-tgw-attach-subnet-b

  #
  # INTERNET GATEWAY
  #
  rIgw:
    Type: AWS::EC2::InternetGateway
    DependsOn: rVpc
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${pName}-igw
  rAttachIgw:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref rVpc
      InternetGatewayId: !Ref rIgw

  #
  # TGW Attachment
  #
  rTransitGatewayAttachment:
    Type: AWS::EC2::TransitGatewayAttachment
    Properties:
      SubnetIds:
        - !Ref rTransitGatewayAttachmentSubnetA
        - !Ref rTransitGatewayAttachmentSubnetB
      Tags:
        - Key: Name
          Value: !Sub ${pName}-tgw-attachment
      TransitGatewayId: !Ref pTransitGatewayId
      VpcId: !Ref rVpc

  #
  # ROUTE TABLES
  #
  rPublicRt:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref rVpc
      Tags:
        - Key: Name
          Value: !Sub ${pName}-public-subnet-rt
  rPublicRtAssociationA:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref rPublicSubnetA
      RouteTableId: !Ref rPublicRt
  rPublicRtAssociationB:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref rPublicSubnetB
      RouteTableId: !Ref rPublicRt

  # Default Route to IGW
  rPublicRtAIgwRoute:
    Type: AWS::EC2::Route
    DependsOn: rAttachIgw
    Properties:
      RouteTableId: !Ref rPublicRt
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref rIgw

  # RFC1918 to TGW
  rPublicRtATgwRouteRfc1918Route1:
    DependsOn: rTransitGatewayAttachment
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref rPublicRt
      DestinationCidrBlock: 10.0.0.0/8
      TransitGatewayId: !Ref pTransitGatewayId
  rPublicRtATgwRouteRfc1918Route2:
    DependsOn: rTransitGatewayAttachment
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref rPublicRt
      DestinationCidrBlock: 172.16.0.0/12
      TransitGatewayId: !Ref pTransitGatewayId
  rPublicRtATgwRouteRfc1918Route3:
    DependsOn: rTransitGatewayAttachment
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref rPublicRt
      DestinationCidrBlock: 192.168.0.0/16
      TransitGatewayId: !Ref pTransitGatewayId

  rTransitGatewayAttachmentRt:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref rVpc
      Tags:
        - Key: Name
          Value: !Sub ${pName}-tgw-attach-subnet-rt
  rTransitGatewayAttachmentRtAssociationA:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref rTransitGatewayAttachmentSubnetA
      RouteTableId: !Ref rTransitGatewayAttachmentRt
  rTransitGatewayAttachmentRtAssociationB:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref rTransitGatewayAttachmentSubnetB
      RouteTableId: !Ref rTransitGatewayAttachmentRt

  #
  # Share DMZ Public Subnets with Organization
  #
  rResourceShare:
    Type: AWS::RAM::ResourceShare
    Properties:
      Name: !Sub ${pName}-public-subnet-share
      AllowExternalPrincipals: false
      ResourceArns:
        - !Sub arn:${AWS::Partition}:ec2:${AWS::Region}:${AWS::AccountId}:subnet/${rPublicSubnetA}
        - !Sub arn:${AWS::Partition}:ec2:${AWS::Region}:${AWS::AccountId}:subnet/${rPublicSubnetB}
      Principals:
        - !Sub arn:${AWS::Partition}:organizations::${pCentralAccountId}:organization/${pPrincipalOrgId}

  #
  # Store values into SSM Parameter Store
  #
  rSsmParameterDmzVpcTransitGatewayAttachmentId:
    Type: AWS::SSM::Parameter
    Properties:
      Name: /compliant/framework/transit/dmz-vpc/tgw-attach/id
      Type: String
      Value: !Ref rTransitGatewayAttachment

Outputs:
  oVpcId:
    Value: !Ref rVpc
  oPublicSubnetAId:
    Value: !Ref rPublicSubnetA
  oPublicSubnetBId:
    Value: !Ref rPublicSubnetB
  oPublicRtId:
    Value: !Ref rPublicRt
  oTransitGatewayAttachmentRtId:
    Value: !Ref rTransitGatewayAttachmentRt
  oTransitGatewayAttachmentId:
    Value: !Ref rTransitGatewayAttachment
